# distributed_clustering_thrill

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  LICENSE_AGPLv3.txt  LICENSE_BSD-2.txt  README.md
analysis/: All-Scaling.ipynb  Cluster Size Distributions.ipynb  Cluster all the things.ipynb  DLM Pre Eval.ipynb  DLM Scaling.ipynb  Graphs.ipynb  LFR Graph Size.ipynb  LFR Params MapEq.ipynb  LFR Params.ipynb  LFR.ipynb  LFRGeneration.ipynb  LP Scaling.ipynb  Level+0+Cluster+Sizes.ipynb  Level0 Plot.ipynb  PLM Scaling.ipynb  Paper - Overview Table.ipynb  Paper - Quality.ipynb  Paper - Real World Runtimes.ipynb  Paper - Real World Similarities.ipynb  Paper - Strong Scaling.ipynb  Paper - Weak Scaling - Quality.ipynb  Paper - Weak Scaling - Runtime.ipynb  Paper - Weak Scaling - Similarity.ipynb  Paper+-+Real+World+Similarities.py  Paper+-+Weak+Scaling+-+Similarity.py  Real World Meltdown Compare.ipynb  Resolution Limit.ipynb  Resources.ipynb  Thread Eval.ipynb  Weak Scaling Meltdown Compare.ipynb  plot_layouting.ipynb
prototypes/: thrill_louvain_sketch.cpp
prototypes/louvain/: .gitignore  CMakeLists.txt
prototypes/louvain/src/: cluster_store.hpp  evaluate_partitioning.cpp  graph.hpp  input.hpp  io.hpp  logging.hpp  main.cpp  modularity.hpp  partitioning.hpp  seq_louvain.cpp  similarity.hpp
prototypes/louvain/src/algo/: modularity.hpp  partitioning.hpp  similarity.hpp
prototypes/louvain/src/util/: input.hpp
prototypes/thrill_convert/: CMakeLists.txt
prototypes/thrill_convert/src/: main.cpp
prototypes/thrill_label_prop_part/: CMakeLists.txt
prototypes/thrill_label_prop_part/src/: main.cpp
prototypes/thrill_local_moving/: CMakeLists.txt
prototypes/thrill_local_moving/src/: main.cpp
prototypes/thrill_louvain/: .gitignore  CMakeLists.txt
prototypes/thrill_louvain/src/: distributed_clustering_analyser.cpp  dlslm.cpp  dlslm_map_eq.cpp  exp.cpp  fix_bin.cpp  input.hpp  label_prop.cpp  label_prop_v2.cpp  local_moving.cpp  main.cpp  node_based_local_moving.cpp  partitioned_louvain.cpp  partitioned_louvain_no_join.cpp  preprocessing.cpp  remove_deg_zero.cpp  synchronous_map_equation.hpp  thrill_graph.hpp  thrill_local_moving.hpp  thrill_louvain.hpp  thrill_modularity.hpp  thrill_partitioning.hpp  util.hpp
prototypes/thrill_louvain/src/algo/thrill/: local_moving.hpp  louvain.hpp  synchronous_map_equation.hpp
prototypes/thrill_louvain/src/data/: ghost_cluster_store.hpp
prototypes/thrill_louvain/src/seq_louvain/: cluster_store.hpp  graph.hpp
prototypes/thrill_louvain/src/util/: util.hpp
prototypes/thrill_louvain_no_join/: CMakeLists.txt
prototypes/thrill_louvain_no_join/src/: main.cpp
prototypes/thrill_read_bin/: CMakeLists.txt
prototypes/thrill_read_bin/src/: main.cpp
prototypes/thrill_tut/: CMakeLists.txt  k_means.cpp
scripts/: chunk_hash_sketch.rb  convert.rb  convert_graph_to_txt.rb  dlm_all.rb  generate_external_partitions.rb  plm.py  prepro_all.rb  read_into_pandas.py  report_to_json.rb  run_on_all_graphs.rb  runtime_extractor.rb  thrill_log_analyzer.rb
scripts/analyze/: analyze_ground_truth.py  analyze_ground_truth_lfr_params.py  clustering_comparison.py  convert_gossip_map_clusterings.py  extract_gossip_map_stats.rb  extract_relax_map_stats.rb  fix_missing_algo_run_links.py  fix_paths.py  fix_relax_map_times.py  lp_runtime_extractor.rb  perform_missing_cluster_analysis.py  postprocess.rb  read_into_pandas.py  report_to_json.rb  runtime_extractor.rb  thrill_log_analyzer.rb  timestamps.rb
scripts/convert/: convert.rb
scripts/experiments/: all_real.rb  all_real_baseline.rb  all_real_gossip_map.rb  all_real_seq.rb  analyse_failed.rb  analyze_ground_truth.rb  block_size.rb  dlm_all.rb  dlm_scaling.rb  generate_external_partitions.rb  lfr_params.rb  lp_scaling.rb  map_eq_lfr_size.rb  meltdown_seq_cmp.rb  plm_all.rb  plm_scaling.rb  pre_dlm.rb  prepro_all.rb  run_on_all_graphs.rb  seq_louvain.rb  strong_scaling.rb  thread_eval.rb  weak_scaling.rb  weak_scaling_gossip_map.rb  weak_scaling_small_quality.rb
scripts/experiments/with_initial_clustering/: cluster_truth.py  cluster_truth_quality.py  init_with_no_cont_quality.py
scripts/moab/: analyze_ground_truth.sh  convert_web_graph.sh  distributed_clustering_analyser.sh  dlm.sh  dlslm.sh  dlslm_map_eq.sh  dlslm_mpi.sh  dlslm_no_contraction.sh  dlslm_with_seq.sh  exp.sh  fake_single_dlm.sh  fake_single_dlslm.sh  fake_single_dlslm_map_eq.sh  fake_single_dlslm_no_contraction.sh  fake_single_dlslm_with_seq.sh  fake_single_lp.sh  fake_single_plm.sh  gossip_map.sh  gossip_map_conversion.sh  no_default_dlm.sh  no_default_dlslm_map_eq.sh  no_default_lp.sh  no_default_plm.sh  plm.sh  plv.sh  pre_exp_dlm.sh  preprocess.sh  preprocess_l.sh  preprocess_s.sh  relax_map.sh  seq_infomap.sh  seq_infomap_directed.sh  seq_louvain.sh
src/: convert_graph_to_gossipmap_binary_edgelist.cpp  convert_infomap_clustering_to_binary.cpp  distributed_clustering_analyser.cpp  dlplm.cpp  dlslm.cpp  dlslm_map_eq.cpp  infomap.cpp  infomap_directed.cpp  label_prop.cpp  preprocess_ground_truth.cpp  seq_exp.cpp  seq_louvain.cpp  streaming_cluster_analysis.cpp
src/algo/: contraction.hpp  louvain.hpp  map_eq.hpp  modularity.hpp  permutation.hpp
src/algo/thrill/: clustering_quality.hpp  contraction.hpp  contraction_k_way_merge.hpp  local_moving.hpp  louvain.hpp  modularity.hpp  partitioning.hpp  synchronous_map_equation.hpp
src/data/: cluster_store.hpp  ghost_cluster_store.hpp  ghost_graph.hpp  graph.hpp  local_dia_graph.hpp
src/data/thrill/: graph.hpp
src/util/: io.hpp  logging.hpp
src/util/thrill/: input.hpp
