cmake_minimum_required (VERSION 2.6)
project (convert)
include_directories("../../lib/thrill")
add_subdirectory (../../lib/thrill ../../../lib/thrill/build)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG -std=c++14 -Wall -Wextra")
add_executable(convert src/main.cpp)
target_link_libraries(convert thrill)
